add title to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Taran's Website
+        </title>
+    </head>
     <body>
         Hello World! This is my website.
     </body>
