feat: add tagsto blog.html contact.html index.html portfolio.html and resume.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         </title>
     </head>
     <body>
-        Hello World! This is my website.
+        <nav>
+
+        </nav>
+        <main>
+            Hello World! This is my website.
+        </main>
+        <footer>
+            © 2023 Taran Singh's Personal Website | All Rights Reserved
+        </footer>
     </body>
 </html>
