feat: add personal flair to index.html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
         </title>
     </head>
     <body>
-        <nav>
-
-        </nav>
+        <nav> </nav>
         <main>
-            Hello World! This is my website.
+            <p>Hello my name is <strong>Taran Singh</strong>! This is my website. I am a first year student at Cal Poly SLO studying <em>Computer Science</em>. I excited to make the most of my 4 years here, especially with fellow peers.</p>
+            <p>When my mind needs a break, I go to the gym.<br>The gym is a great place for me to wind down and let my brain rest while I put my body to work.</p>
         </main>
-        <footer>
-            © 2023 Taran Singh's Personal Website | All Rights Reserved
-        </footer>
+        <footer>© 2023 Taran Singh's Personal Website | All Rights Reserved </footer>
     </body>
 </html>
