--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
         <nav> </nav>
         <main>
             <h1>About Me</h1>
-            <p>Hello my name is <strong>Taran Singh</strong>! This is my website. I am a first year student at Cal Poly SLO studying <em>Computer Science</em>. I excited to make the most of my 4 years here, especially with fellow peers.</p>
-            <p>When my mind needs a break, I go to the gym.<br>The gym is a great place for me to wind down and let my brain rest while I put my body to work.</p>
+            <div class="about">
+                <div class="about-image">
+                </div>
+                <div class="about-text">
+                <p>
+                    Hello my name is <strong>Taran Singh</strong>! This is my website. I am a first year student at Cal Poly SLO studying <em>Computer Science</em>. I excited to make the most of my 4 years here, especially with fellow peers.
+                </p>
+                <p>
+                    When my mind needs a break, I go to the gym.<br>The gym is a great place for me to wind down and let my brain rest while I put my body to work.
+                </p>
+                </div>
+            </div>
+            
             <h2>More Things Coming Soon...</h2>
         </main>
         <footer>© 2023 Taran Singh's Personal Website | All Rights Reserved </footer>
