feat: add attributes for h1, nav, and footer tags for all .html files.

--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,14 @@
         </title>
     </head>
     <body>
-        <nav>
-
+        <nav class="navbar">
+            <h1 class="logo">taran singh</h1>
         </nav>
         <main>
+            <h1 class="contact">Contact</h1>
             School Email: tsingh33@calpoly.edu
         </main>
-        <footer>
+        <footer class="footer">
             © 2023 Taran Singh's Personal Website | All Rights Reserved
         </footer>
     </body>
