--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         </title>
     </head>
     <body>
-        <nav> </nav>
+        <nav class="navbar"> 
+            <h1 class="logo">taran singh</h1>
+        </nav>
         <main>
-            <h1>About Me</h1>
+            <h1 class="index">About Me</h1>
             <div class="about">
                 <div class="about-image">
                 </div>
@@ -24,6 +26,8 @@
             
             <h2>More Things Coming Soon...</h2>
         </main>
-        <footer>© 2023 Taran Singh's Personal Website | All Rights Reserved </footer>
+        <footer class="footer">
+            © 2023 Taran Singh's Personal Website | All Rights Reserved 
+        </footer>
     </body>
 </html>
