--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,14 @@
         </title>
     </head>
     <body>
-        <nav>
-
-        </nav>
+        <nav class="navbar">
+            <h1 class="logo">taran singh</h1>
+        </nav>  
         <main>
+            <h1 class="portofilio">Portfolio</h1>
             Projects:
         </main>
-        <footer>
+        <footer class="footer">
             © 2023 Taran Singh's Personal Website | All Rights Reserved
         </footer>
     </body>
