--- a/resume.html
+++ b/resume.html
@@ -6,17 +6,18 @@
         </title>
     </head>
     <body>
-        <nav>
-
+        <nav class="navbar">
+            <h1 class="logo">taran singh</h1>
         </nav>
         <main>
+            <h1 class="resume">Resume</h1>
             <section></section>
             <section></section>
             <section></section>
             <section></section>
             <section></section>
         </main>
-        <footer>
+        <footer class="footer">
             © 2023 Taran Singh's Personal Website | All Rights Reserved
         </footer>
     </body>
