--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,14 @@
         </title>
     </head>
     <body>
-        <nav>
-
+        <nav class="navbar">
+            <h1 class="logo">taran singh</h1>
         </nav>
         <main>
+            <h1 class="blog">Blog</h1>
             Blog - Coming Soon...
         </main>
-        <footer>
+        <footer class="footer">
             © 2023 Taran Singh's Personal Website | All Rights Reserved
         </footer>
     </body>
