feat: add more to resume.html

--- a/resume.html
+++ b/resume.html
@@ -11,11 +11,23 @@
         </nav>
         <main>
             <h1 class="resume">Resume</h1>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
+            <div class="resume">
+                <section class="section">
+                    <h2 class="section-title">Skills</h2>
+                </section>
+                <section class="section">
+                    <h2 class="section-title">Experience</h2>
+                </section>
+                <section class="section">
+                    <h2 class="section-title">Projects</h2>
+                </section>
+                <section class="section">
+                    <h2 class="section-title">Education</h2>
+                </section>
+                <section class="section">
+                    <h2 class="section-title">Coursework</h2>
+                </section>
+            </div>
         </main>
         <footer class="footer">
             © 2023 Taran Singh's Personal Website | All Rights Reserved
