feat: add div to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,9 @@
         </nav>  
         <main>
             <h1 class="portofilio">Portfolio</h1>
-            Projects:
+            <div class="project">
+                Projects:
+            </div>
         </main>
         <footer class="footer">
             © 2023 Taran Singh's Personal Website | All Rights Reserved
