feat: add links to index.html for each header

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <nav class="navbar">
-            <h1 class="logo">taran singh</h1>
+            <h1 class="logo">
+                <a href="index.html">taran's personal website</a>
+            </h1>
         </nav>  
         <main>
             <h1 class="portofilio">Portfolio</h1>
