feat: add menu bar with access to other pages to all .html files.

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,13 @@
             <h1 class="logo">
                 <a href="index.html">taran's personal website</a>
             </h1>
+            <ul class="nav-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
         <main>
             <h1 class="blog">Blog</h1>
