feat: add image to index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <h1 class="index">About Me</h1>
             <div class="about">
                 <div class="about-image">
+                    <img src="me.jpg" alt="This is an image of me!"
                 </div>
                 <div class="about-text">
                 <p>
