feat: add formto contact.html

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,15 @@
             <h1 class="logo">
                 <a href="index.html">taran's personal website</a>
             </h1>
+            <form id="contact-form">
+                <label for="name">Name:</label>
+                <input type="text" id="name">
+                <label for="email">Email:</label>
+                <input type="email" id="email">
+                <label>Message:</label>
+                <textarea></textarea>
+                <input type="submit">  
+            </form>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="blog.html">Blog</a></li>
