feat: add project to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,18 @@
         <main>
             <h1 class="portofilio">Portfolio</h1>
             <div class="project">
-                Projects:
+                <a href="index.html">
+                    <img src="www.jpg" alt="This is am image representing my Personal Website Project">
+                </a>
+                <div class="project-details">
+                    <p class="project-name">
+                        My Personal Website 
+                    </p>
+                    <p class="project-description">
+                        This is a project where I create a personal website.
+                    </p>
+                    <a href="index.html">Learn More</a>
+                </div>
             </div>
         </main>
         <footer class="footer">
