fix: image size on portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             <h1 class="portofilio">Portfolio</h1>
             <div class="project">
                 <a href="index.html">
-                    <img src="www.jpg" alt="This is am image representing my Personal Website Project">
+                    <img src="www.jpg" height="200" width="300" alt="This is am image representing my Personal Website Project">
                 </a>
                 <div class="project-details">
                     <p class="project-name">
