feat: link cssfile to every .html file

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
         <title>
             Blog
         </title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <nav class="navbar">
