--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>
             Taran's Website
         </title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <nav class="navbar"> 
