--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
         <title>
             Contact
         </title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <nav class="navbar">
