--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
         <title>
             Portfolio
         </title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <nav class="navbar">
