--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
         <title>
             Resume
         </title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <nav class="navbar">
