fix: comment code that was causing a formating problem for index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             
-            <h2>More Things Coming Soon...</h2>
+            <!-- <h2>More Things Coming Soon...</h2> --> 
         </main>
         <footer class="footer">
             © 2023 Taran Singh's Personal Website | All Rights Reserved 
