--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
         <title>
             Blog
         </title>
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="styles.min.css"/>
     </head>
     <body>
         <nav class="navbar">
