--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             Taran's Website
         </title>
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="styles.min.css"/>
     </head>
     <body>
         <nav class="navbar"> 
